--- a/css/sections/contact.css
+++ b/css/sections/contact.css
@@ -5,7 +5,7 @@
 
 /** Contact section main container */
 #contact {
-  padding: 60px 0 100px;
+  padding: 80px 0 120px;
   background: var(--gradient-1-light);
 }
 
