--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -13,7 +13,7 @@
   position: relative;
   overflow: hidden;
   min-height: 600px;
-  padding-top: calc(var(--header-height) + 50px);
+  padding-top: calc(var(--header-height) + 70px);
 }
 
 #hero::before {
