--- a/css/sections/projects.css
+++ b/css/sections/projects.css
@@ -5,7 +5,7 @@
 
 /* Projects grid */
 #projects {
-  padding: 60px 0 100px;
+  padding: 80px 0 120px;
   background-color: var(-- /** Responsive breakpoints */ ight);
   position: relative;
 }
