--- a/css/sections/skills.css
+++ b/css/sections/skills.css
@@ -1,7 +1,7 @@
 /** Skills section styles */
 
 #skills {
-  padding: 60px 0 100px;
+  padding: 80px 0 120px;
   background-color: var(--light);
 }
 
