--- a/css/utils/animations.css
+++ b/css/utils/animations.css
@@ -86,6 +86,10 @@ section::after {
   opacity: 0.7;
 }
 
+#hero::after {
+  display: block;
+}
+
 section:last-of-type::after {
   display: none;
 }
@@ -93,7 +97,7 @@ section:last-of-type::after {
 section.section-active::before {
   content: "";
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   height: var(--accent-line-thickness);
@@ -106,11 +110,6 @@ section.section-active::before {
   transform: scaleX(0);
   transform-origin: center;
   animation: section-line 0.8s var(--ease-smooth) forwards;
-}
-
-section.section-active[data-scroll-direction="up"]::before {
-  bottom: auto;
-  top: 0;
 }
 
 @keyframes section-line {
